CityGML and OSM sample files cleanup